--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
+    <a href="./recipes/lasagna.html">Lasagna</a>
+    <a href="./recipes/chicken-burger.html">Chicken Burger</a>
+    <a href="./recipes/brownie.html">Brownie</a>
 </body>
 </html>
