--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -1,1 +1,33 @@
-<h1>Lasagna</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Lasagna | Odin Recipes</title>
+</head>
+<body>
+    <h1>Lasagna</h1>
+    <img src="../images/lasagna.webp" alt="Photo of lasagna with a glass of wine" title="Photo of lasagna with a glass of wine"/>
+    <h3>Description</h3>
+    <p>Lasagna is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>1 package of lasagna noodles (16 ounce)</li>
+        <li>1 pound lean ground beef</li>
+        <li>salt and pepper</li>
+        <li>1 jar spaghetti sauce (16 ounces)</li>
+        <li>1 clove garlic (minced)</li>
+        <li><sup>1</sup>/<sub>2</sub> pound shredded mozzarella cheese</li>
+        <li><sup>1</sup>/<sub>2</sub> pound shredded cheddar cheese</li>
+        <li>1 pint ricotta cheese</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Bring a large pot of lightly salted water to a boil. Add pasta and cook for 8 to 10 minutes or until al dente; drain.</li>
+        <li>Preheat oven to 350 degrees F (175 degrees C). In a large skillet over medium-high heat, brown beef and season with salt and pepper; drain. Stir in spaghetti sauce and garlic and simmer 5 minutes.</li>
+        <li>In a medium bowl, combine mozzarella, Cheddar and ricotta; stir well. In 9x13 inch pan, alternate layers of noodles, meat mixture and cheese mixture until pan is filled.</li>
+        <li>Bake in preheated oven for 30 minutes, or until cheese is melted and bubbly.</li>
+    </ol>
+</body>
+</html>
