updated chicken burger recipe page

--- a/recipes/chicken-burger.html
+++ b/recipes/chicken-burger.html
@@ -1,1 +1,44 @@
-<h1>Chicken Burger</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Chicken Burger | Odin Recipes</title>
+</head>
+<body>
+    <h1>Chicken Burger</h1>
+    <img src="../images/chicken-burger.webp" alt="">
+    <h3>Description</h3>
+    <p>Spicy minced chicken patty between buttered buns is sure to have many mouth watering slurps around!</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>250 Gram Minced Chicken</li>
+        <li>For frying Oil</li>
+        <li>2 Onions (Chopped)</li>
+        <li>2 tbsp Coriander (Chopped)</li>
+        <li>1 tsp Garlic (Chopped)</li>
+        <li>3 tbsp Salt</li>
+        <li>3 tsp Chilli flakes</li>
+        <li>3 tsp Black pepper</li>
+        <li>1 Egg</li>
+        <li>3 tbsp Bread crumbs</li>
+        <li>2 tbsp Mayonnaise</li>
+        <li>4 Burger Buns</li>
+        <li>2 Lettuce</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>Pour some oil in a pan and ut freshly chopped onions in it and fry until golden brown.</li>
+        <li>Take another bowl and add minced chicken to it.</li>
+        <li>Along with it add coriander, salt, chilli flakes, black pepper, garlic and fried onions.</li>
+        <li>Crack an egg into the bowl and mix it all well together with your hands.</li>
+        <li>Add bread crumbs to the mixture.</li>
+        <li>Make round patties of the mixture using your hand and pan fry it until golden brown.</li>
+        <li>Take the buns and add butter/mayonnaise, lettuce and onion or any other filling of your choice.</li>
+        <li>Put the fried patties between the buns. Serve hot.</li>
+    </ol>
+    <br>
+    <a href="../index.html">Back to homepage</a>
+</body>
+</html>
