updated brownie recipe page

--- a/recipes/brownie.html
+++ b/recipes/brownie.html
@@ -1,1 +1,32 @@
-<h1>Brownie</h1>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Brownie | Odin Recipes</title>
+</head>
+<body>
+    <h1>Brownie</h1>
+    <img src="../images/brownie.webp" alt="An image of brownie">
+    <h3>Description</h3>
+    <p>A brownie is a square or rectangular chocolate baked confection. Brownies come in a variety of forms and may be either fudgy or cakey, depending on their density.</p>
+    <h3>Ingredients</h3>
+    <ul>
+        <li>5 eggs</li>
+        <li><sup>1</sup>/<sub>2</sub> cup unsweetened cocoa powder</li>
+        <li>2<sup>1</sup>/<sub>2</sub> cups white sugar</li>
+        <li>1<sup>1</sup>/<sub>4</sub> cups vegetable oil</li>
+        <li>1<sup>1</sup>/<sub>4</sub> cups matzo cake meal</li>
+        <li>1<sup>1</sup>/<sub>4</sub> cups chopped walnuts</li>
+    </ul>
+    <h3>Steps</h3>
+    <ol>
+        <li>In a large mixing bowl, beat the eggs and the sugar together. Add the oil. Mix in the cake meal and the cocoa.</li>
+        <li>Add nuts, or use the nuts as a topping. I put nuts on top rather than in this cake for two reasons. They make the top look good without having to frost it. Also, for those who don 1t or can 1t eat nuts, they are easily removed without having to search for them.</li>
+        <li>Add nuts, or use the nuts as a topping. I put nuts on top rather than in this cake for two reasons. They make the top look good without having to frost it. Also, for those who don 1t or can 1t eat nuts, they are easily removed without having to search for them.</li>
+    </ol>
+    <br>
+    <a href="../index.html">Back to homepage</a>
+</body>
+</html>
