added recipe links to unordered list

--- a/index.html
+++ b/index.html
@@ -8,8 +8,10 @@
 </head>
 <body>
     <h1>Odin Recipes</h1>
-    <a href="./recipes/lasagna.html">Lasagna</a>
-    <a href="./recipes/chicken-burger.html">Chicken Burger</a>
-    <a href="./recipes/brownie.html">Brownie</a>
+    <ul>
+        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
+        <li><a href="./recipes/chicken-burger.html">Chicken Burger</a></li>
+        <li><a href="./recipes/brownie.html">Brownie</a></li>
+    </ul>
 </body>
 </html>
