added css styling to all html pages

--- a/recipes/brownie.html
+++ b/recipes/brownie.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Brownie | Odin Recipes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Brownie</h1>
-    <img src="../images/brownie.webp" alt="An image of brownie">
+    <img src="../images/brownie.webp" alt="An image of brownie" class="recipe-image">
     <h3>Description</h3>
     <p>A brownie is a square or rectangular chocolate baked confection. Brownies come in a variety of forms and may be either fudgy or cakey, depending on their density.</p>
     <h3>Ingredients</h3>
