--- a/recipes/lasagna.html
+++ b/recipes/lasagna.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Lasagna | Odin Recipes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Lasagna</h1>
-    <img src="../images/lasagna.webp" alt="Photo of lasagna with a glass of wine" title="Photo of lasagna with a glass of wine"/>
+    <img src="../images/lasagna.webp" alt="Photo of lasagna with a glass of wine" title="Photo of lasagna with a glass of wine" class="recipe-image"/>
     <h3>Description</h3>
     <p>Lasagna is a type of pasta, possibly one of the oldest types, made of very wide, flat sheets.</p>
     <h3>Ingredients</h3>
