--- a/index.html
+++ b/index.html
@@ -5,13 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Odin Recipes</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>Odin Recipes</h1>
     <ul>
-        <li><a href="./recipes/lasagna.html">Lasagna</a></li>
-        <li><a href="./recipes/chicken-burger.html">Chicken Burger</a></li>
-        <li><a href="./recipes/brownie.html">Brownie</a></li>
+        <li><a href="./recipes/lasagna.html" class="recipe-link">Lasagna</a></li>
+        <li><a href="./recipes/chicken-burger.html" class="recipe-link">Chicken Burger</a></li>
+        <li><a href="./recipes/brownie.html" class="recipe-link">Brownie</a></li>
     </ul>
 </body>
 </html>
