--- a/recipes/chicken-burger.html
+++ b/recipes/chicken-burger.html
@@ -5,10 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chicken Burger | Odin Recipes</title>
+    <link rel="stylesheet" href="../style.css">
 </head>
 <body>
     <h1>Chicken Burger</h1>
-    <img src="../images/chicken-burger.webp" alt="">
+    <img src="../images/chicken-burger.webp" alt="A picture od chicken burger" class="recipe-image">
     <h3>Description</h3>
     <p>Spicy minced chicken patty between buttered buns is sure to have many mouth watering slurps around!</p>
     <h3>Ingredients</h3>
